--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,9 +3,22 @@
   width: 100vw;
 }
 .app {
-  background-image: url('./assets/background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* min-height: 100vh;
+  width: 100%; */
+}
+.main-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   min-height: 100vh;
-  width: 100%;
+  width: 100vw;
+}
+.backgroundImage {
+    background-image: url(/src/assets/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: -1;
 }
