--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
 }
 .backgroundImage {
     background-image: url(/src/assets/background.jpg);
