--- a/Frontend/src/css/terms-condition.css
+++ b/Frontend/src/css/terms-condition.css
@@ -5,28 +5,35 @@
     align-items: center;
 }
 .total-container button{
-    background-color: green;
+    background-color: #238f23;
     color: white;
     height: 50px;
+    border-radius: 9999px;
+    padding: 15px 40px;
 }
 .terms-condition-container {
-  max-width: 800px;
+  max-width: 750px;
   margin: 40px auto;
-  padding: 0 20px;
-  line-height: 1.6;
+  /* padding: 0 20px; */
+  /* line-height: 1.6; */
   color: #333;
 }
 
 .terms-content {
   background: #ffffff;
-  padding: 32px;
+  padding: 40px;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   border: 1px solid #e5e7eb;
 }
 
+.terms-title{
+ font-size: 1.5em;
+ margin-bottom: 1.5em;
+}
+
 .terms-section {
-  margin-bottom: 32px;
+  margin-bottom: px;
 }
 
 .terms-section:last-child {
@@ -50,7 +57,7 @@
   font-size: 16px;
   color: #4b5563;
   margin: 12px 0;
-  text-align: justify;
+  text-align: center;
 }
 
 .terms-paragraph:first-child {
